# lights_out_solver

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  Readme.md  los.1
.github/workflows/: release.yml  rust-clippy.yml
src/: args.rs  lib.rs  main.rs  program.rs  solver.rs
src/chain_of_responsability/: chainable.rs  handler.rs  mod.rs  state.rs  worker.rs
src/chain_of_responsability/implementations/: mod.rs  print.rs  sanitize_input.rs  simulator.rs  solver.rs  validate_range.rs
src/solvers/: board.rs  gf2.rs  mod.rs  recursive.rs
src/workers/: mod.rs  worker.rs
src/workers/implementations/: mod.rs  print.rs  sanitize_input.rs  simulator.rs  solver.rs  validate_range.rs
