[package]
name = "lights_out_solver"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.3.12", features=["cargo"] }
log = "0.4.19"
simple_logger = "4.2.0"

[[bin]]
name = "los"
path = "src/main.rs"